# scaled_fjt_controller

./: CMakeLists.txt  README.md  package.xml  scaled_fjt_controller.xml
include/scaled_fjt_controller/: microinterpolator.h  scaled_fjt_controller.hpp
src/: .scaled_fjt_controller.cpp.swp  microinterpolator.cpp  scaled_fjt_controller.cpp
